2014-11-18  Myles C. Maxfield  <litherum@gmail.com>

        Multicolumn layout with negative line spacing and orphans causes pieces of letters to be shown at the bottom of columns
        https://bugs.webkit.org/show_bug.cgi?id=138204

        Reviewed by Dave Hyatt.

        Create a layout where the "orphans" css property causes a block element to
        be pushed to the next column.

        * fast/multicol/orphans-negative-line-spacing-expected.html: Added.
        * fast/multicol/orphans-negative-line-spacing.html: Added.

2014-11-18  Philippe Normand  <pnormand@igalia.com>

        start/stop method for AudioBufferSourceNodes and OscillatorNodes can take no args
        https://bugs.webkit.org/show_bug.cgi?id=138739

        Reviewed by Darin Adler.

        * webaudio/dom-exceptions-expected.txt: Added.
        * webaudio/dom-exceptions.html: Added.

2014-11-18  Joanmarie Diggs  <jdiggs@igalia.com>

        AX: [ATK] Crash getting the orientation of a MenuListOption after the MenuList was removed from the document
        https://bugs.webkit.org/show_bug.cgi?id=138727

        Reviewed by Chris Fleizach.

        * platform/gtk/accessibility/combobox-descendants-orientation-crash-expected.txt: Added.
        * platform/gtk/accessibility/combobox-descendants-orientation-crash.html: Added.

2014-11-16  Chris Dumez  <cdumez@apple.com>

        Assertion hit when setting a very large value to 'border-width' / 'font-size' CSS properties
        https://bugs.webkit.org/show_bug.cgi?id=138770

        Reviewed by Darin Adler.

        Add a layout test setting very large values to 'border-width' and
        'font-size' CSS properties.

        * fast/css/style-builder-infinite-value-expected.txt: Added.
        * fast/css/style-builder-infinite-value.html: Added.

2014-11-16  Shivakumar JM  <shiva.jm@samsung.com>

        Attribute text in HTMLAnchorElement should behave as per specification.
        https://bugs.webkit.org/show_bug.cgi?id=138557
