@@ -1,0 +1,32 @@
+<!DOCTYPE HTML>
+<html>
+<head>
+<style type="text/css">
+    table {
+    	width: 130px;
+    	border-collapse:collapse;
+    }
+    .button {
+      display: inline-block;
+      padding: 5px;
+      margin: 3px;
+      background: green;
+      min-width: 100px;
+    }
+</style>
+</head>
+<body>
+<table>
+	<tbody>
+		<tr>
+			<td>
+			  <div>
+			    <span class="button">One</span><span class="button">Two</span><span class="button">Three</span><span> </span>
+			  </div>
+			</td>
+		</tr>
+	</tbody>
+</table>
+
+</body>
+</html>
